--- a/front/templates/budget/invoice.html
+++ b/front/templates/budget/invoice.html
@@ -1,78 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{ vm.title }}</title>
+  <meta charset="UTF-8">
+  <title>{{ vm.title }}</title>
 </head>
 <body>
-    <h1 class="page-header">Invoice <small><span class="glyphicon glyphicon-usd"></span></small></h1>
-    <ul class="nav nav-tabs">
-        <li><a href="#!/budget">My budget</a></li>
-        <li class="active"><a href="#!/budget/invoice">Invoice</a></li>
-        <li><a href="#!/budget/account">Budget Account</a></li>
-        <li><a href="#!/budget/currency">Currency</a></li>
-        <li><a href="#!/budget/category">Category budget</a></li>
-    </ul>
-    <button type="button" class="btn btn-info" ng-click="listInvoice()">List
+  <h1 class="page-header">Invoice <small><span class="glyphicon glyphicon-usd"></span></small></h1>
+  <ul class="nav nav-tabs">
+    <li><a href="#!/budget">My budget</a></li>
+    <li class="active"><a href="#!/budget/invoice">Invoice</a></li>
+    <li><a href="#!/budget/account">Budget Account</a></li>
+    <li><a href="#!/budget/currency">Currency</a></li>
+    <li><a href="#!/budget/category">Category budget</a></li>
+  </ul>
+  <button type="button" class="btn btn-info" ng-click="listInvoice()">List
         <span class="glyphicon glyphicon-refresh"></span></button>
-    <button type="button" class="btn btn-success" ng-click="addInvoice()">Add
+  <button type="button" class="btn btn-success" ng-click="addInvoice()">Add
         <span class="glyphicon glyphicon-plus"></span></button>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <tr>
-                <th># ID</th>
-                <th>Currency</th>
-                <th>Amount</th>
-                <th>Transaction type</th>
-                <th>Budget account</th>
-                <th>Category</th>
-                <th>Creation data</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            <tr ng-repeat="item in listInv">
-                <td>{{ item.id }}</td>
-                <td>{{ item.currency }}</td>
-                <td>{{ item.amount }}</td>
-                <td><span class="{{ item.transaction_type | transactionType }}"></span></td>
-                <td>{{ item.budget_account }}</td>
-                <td>{{ item.category }}</td>
-                <td>{{ item.creation_date | date:'yyyy.MM.dd' }}</td>
-                <td><button type="button" class="btn btn-info" ng-click="editInvoice(item)">
-                    <span class="glyphicon glyphicon-pencil"></span></button></td>
-                <td><button type="button" class="btn btn-danger" ng-click="deleteInvoice(item.id)">
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <tr>
+        <th># ID</th>
+        <th>Currency</th>
+        <th>Amount</th>
+        <th>Transaction type</th>
+        <th>Budget account</th>
+        <th>Category</th>
+        <th>Creation data</th>
+        <th>Edit Delete</th>
+      </tr>
+      <tr ng-repeat="item in listInv">
+        <td>{{ item.id }}</td>
+        <td>{{ item.currency }}</td>
+        <td>{{ item.amount }}</td>
+        <td><span class="{{ item.transaction_type | transactionTypeIcon }}"></span></td>
+        <td>{{ item.budget_account }}</td>
+        <td>{{ item.category }}</td>
+        <td>{{ item.creation_date | date:'yyyy.MM.dd' }}</td>
+        <td><button type="button" class="btn btn-info" ng-click="editInvoice(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button>
+          <button type="button" class="btn btn-danger" ng-click="deleteInvoice(item.id)">
                     <span class="glyphicon glyphicon-remove"></span></button></td>
-            </tr>
-        </table>
-    </div>
-    <div ng-if="addItemState || editItemState">
-        <h3>{{ edit_status }}</h3>
-        <form role="form">
-            <div class="col-md-3">
-                Currency<input type="text" class="form-control" ng-model="invoice.currency">
-            </div>
-            <div class="col-md-3">
-                Amount<input type="text" class="form-control" ng-model="invoice.amount">
-            </div>
-            <div class="col-md-3">
-                Transaction type<input type="text" class="form-control" ng-model="invoice.transaction_type">
-            </div>
-            <div class="col-md-3">
-                Budget account<input type="text" class="form-control" ng-model="invoice.budget_account">
-            </div>
-            <div class="col-md-3">
-                Category<input type="text" class="form-control" ng-model="invoice.category">
-            </div>
-            <div class="col-md-6">
-                Description<input type="text" class="form-control" ng-model="invoice.description">
-            </div>
-            <button type="button" class="btn btn-success" ng-click="createInvoice()" ng-if="addItemState">
+      </tr>
+    </table>
+  </div>
+  <div ng-if="addItemState || editItemState">
+    <h3>{{ edit_status }}</h3>
+    <form role="form">
+      <div class="col-md-3">
+        Currency<input type="text" class="form-control" ng-model="invoice.currency">
+      </div>
+      <div class="col-md-3">
+        Amount<input type="text" class="form-control" ng-model="invoice.amount">
+      </div>
+      <div class="col-md-3">
+        Transaction type<input type="text" class="form-control" ng-model="invoice.transaction_type">
+      </div>
+      <div class="col-md-3">
+        Budget account<input type="text" class="form-control" ng-model="invoice.budget_account">
+      </div>
+      <div class="col-md-3">
+        Category<input type="text" class="form-control" ng-model="invoice.category">
+      </div>
+      <div class="col-md-6">
+        Description<input type="text" class="form-control" ng-model="invoice.description">
+      </div>
+      <button type="button" class="btn btn-success" ng-click="createInvoice()" ng-if="addItemState">
                 Add invoice</button>
-            <button type="button" class="btn btn-success" ng-click="updateInvoice()" ng-if="editItemState">
+      <button type="button" class="btn btn-success" ng-click="updateInvoice()" ng-if="editItemState">
                 Save invoice</button>
-            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addItemState || editItemState">
+      <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addItemState || editItemState">
                 Cancel</button>
-        </form>
-    </div>
+    </form>
+  </div>
 </body>
 </html>
