--- a/front/templates/password/password.html
+++ b/front/templates/password/password.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{ vm.title }}</title>
+  <meta charset="UTF-8">
+  <title>{{ vm.title }}</title>
 </head>
 <body>
-    <h1 class="page-header">Password Organizer <small><span class="glyphicon glyphicon-asterisk"></span></small></h1>
-    <button type="button" class="btn btn-info" ng-click="listPassword()">List
+  <h1 class="page-header">Password Organizer <small><span class="glyphicon glyphicon-asterisk"></span></small></h1>
+  <button type="button" class="btn btn-info" ng-click="listPassword()">List
         <span class="glyphicon glyphicon-refresh"></span></button>
-    <button type="button" class="btn btn-success" ng-click="addPassword()">Add
+  <button type="button" class="btn btn-success" ng-click="addPassword()">Add
         <span class="glyphicon glyphicon-plus"></span></button>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <tr>
-                <th># ID</th>
-                <th>Resource url</th>
-                <th>Password resource</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            <tr ng-repeat="item in items">
-                <td>{{ item.id }}</td>
-                <td>{{ item.resource_url }}</td>
-                <td>{{ item.password_res }}</td>
-                <td> <button type="button" class="btn btn-info" ng-click="editPassword(item)">
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <tr>
+        <th># ID</th>
+        <th>Resource url</th>
+        <th>Password resource</th>
+        <th>Edit Delete</th>
+      </tr>
+      <tr ng-repeat="item in items">
+        <td>{{ item.id }}</td>
+        <td>{{ item.resource_url }}</td>
+        <td>{{ item.password_res }}</td>
+        <td><button type="button" class="btn btn-info" ng-click="editPassword(item)">
                     <span class="glyphicon glyphicon-pencil"></span></button></td>
-                <td> <button type="button" class="btn btn-danger" ng-click="deletePassword(item.id)">
-                    <span class="glyphicon glyphicon-remove"></span></button></td>
-            </tr>
-        </table>
-    </div>
-    <div ng-if="addPasswordState || editPasswordState">
-        <h3>{{ edit_status }}</h3>
-        <form role="form">
-            <div class="col-md-4">
-                Resource url<input type="text" class="form-control" ng-model="password.resource_url">
-            </div>
-            <div class="col-md-4">
-                Password resource<input type="text" class="form-control" ng-model="password.password_res">
-            </div>
-            <button type="button" class="btn btn-success" ng-click="createPassword()" ng-if="addPasswordState">
+      </tr>
+    </table>
+  </div>
+  <div ng-if="addPasswordState || editPasswordState">
+    <h3>{{ edit_status }}</h3>
+    <form role="form">
+      <div class="col-md-4">
+        Resource url<input type="text" class="form-control" ng-model="password.resource_url">
+      </div>
+      <div class="col-md-4">
+        Password resource<input type="text" class="form-control" ng-model="password.password_res">
+      </div>
+      <button type="button" class="btn btn-success" ng-click="createPassword()" ng-if="addPasswordState">
                 Add password</button>
-            <button type="button" class="btn btn-success" ng-click="updatePassword()" ng-if="editPasswordState">
+      <button type="button" class="btn btn-success" ng-click="updatePassword()" ng-if="editPasswordState">
                 Save password</button>
-            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addPasswordState || editPasswordState">
+      <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addPasswordState || editPasswordState">
                 Cancel</button>
-        </form>
-    </div>
+    </form>
+  </div>
 </body>
 </html>
