--- a/front/templates/task/event.html
+++ b/front/templates/task/event.html
@@ -1,70 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{ vm.title }}</title>
+  <meta charset="UTF-8">
+  <title>{{ vm.title }}</title>
 </head>
 <body>
-    <h1 class="page-header">Event <small><span class="glyphicon glyphicon-check"></span></small></h1>
-    <ul class="nav nav-tabs">
-        <li><a href="#!task/short">Short Task</a></li>
-        <li><a href="#!task">Task</a></li>
-        <li class="active"><a href="#!task/event">Event</a></li>
-        <li><a href="#!task/category">Category Task</a></li>
-    </ul>
-    <button type="button" class="btn btn-info" ng-click="listEvent()">List
+  <h1 class="page-header">Event <small><span class="glyphicon glyphicon-check"></span></small></h1>
+  <ul class="nav nav-tabs">
+    <li><a href="#!task/short">Short Task</a></li>
+    <li><a href="#!task">Task</a></li>
+    <li class="active"><a href="#!task/event">Event</a></li>
+    <li><a href="#!task/category">Category Task</a></li>
+  </ul>
+  <button type="button" class="btn btn-info" ng-click="listEvent()">List
         <span class="glyphicon glyphicon-refresh"></span></button>
-    <button type="button" class="btn btn-success" ng-click="addEvent()">Add
+  <button type="button" class="btn btn-success" ng-click="addEvent()">Add
         <span class="glyphicon glyphicon-plus"></span></button>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <tr>
-                <th># ID</th>
-                <th>Title</th>
-                <th>Starting date</th>
-                <th>Finishing date</th>
-                <th>Reminder date</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            <tr ng-repeat="item in listE">
-                <td>{{ item.id }}</td>
-                <td>{{ item.title }}</td>
-                <td>{{ item.event_date_start | date:'yyyy-MM-dd' }}</td>
-                <td>{{ item.event_date_finish | date:'yyyy-MM-dd' }}</td>
-                <td>{{ item.reminder_date | date:'yyyy-MM-dd' }}</td>
-                <td><button type="button" class="btn btn-info" ng-click="editEvent(item)">
-                    <span class="glyphicon glyphicon-pencil"></span></button></td>
-                <td><button type="button" class="btn btn-danger" ng-click="deleteEvent(item.id)">
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <tr>
+        <th># ID</th>
+        <th>Title</th>
+        <th>Starting date</th>
+        <th>Finishing date</th>
+        <th>Reminder date</th>
+        <th>Edit Delete</th>
+      </tr>
+      <tr ng-repeat="item in listE">
+        <td>{{ item.id }}</td>
+        <td>{{ item.title }}</td>
+        <td>{{ item.event_date_start | date:'dd.MM.yyyy HH:mm' }}</td>
+        <td>{{ item.event_date_finish | date:'dd.MM.yyyy HH:mm' }}</td>
+        <td>{{ item.reminder_date | date:'dd.MM.yyyy HH:mm' }}</td>
+        <td><button type="button" class="btn btn-info" ng-click="editEvent(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button>
+          <button type="button" class="btn btn-danger" ng-click="deleteEvent(item.id)">
                     <span class="glyphicon glyphicon-remove"></span></button></td>
-            </tr>
-        </table>
-    </div>
-    <div ng-if="addTaskState || editTaskState">
-        <h3>{{ edit_status }}</h3>
-        <form role="form">
-            <div class="col-md-4">
-                Title<input type="text" class="form-control" ng-model="event.title">
-            </div>
-            <div class="col-md-8">
-                Body<textarea class="form-control" rows="8" ng-model="event.body"></textarea>
-            </div>
-            <div class="col-md-3">
-                Starting date<input type="text" class="form-control" ng-model="event.event_date_start">
-            </div>
-            <div class="col-md-3">
-                Finishing date<input type="text" class="form-control" ng-model="event.event_date_finish">
-            </div>
-            <div class="col-md-3">
-                Reminder date<input type="text" class="form-control" ng-model="event.reminder_date">
-            </div>
-            <button type="button" class="btn btn-success" ng-click="createEvent()" ng-if="addTaskState">
+      </tr>
+    </table>
+  </div>
+  <div ng-if="addTaskState || editTaskState">
+    <h3>{{ edit_status }}</h3>
+    <form role="form">
+      <div class="col-md-4">
+        Title<input type="text" class="form-control" ng-model="event.title">
+      </div>
+      <div class="col-md-8">
+        Body<textarea class="form-control" rows="8" ng-model="event.body"></textarea>
+      </div>
+      <div class="col-md-3">
+        Starting date<input type="datetime-local" class="form-control" ng-model="event.event_date_start">
+      </div>
+      <div class="col-md-3">
+        Finishing date<input type="datetime-local" class="form-control" ng-model="event.event_date_finish">
+      </div>
+      <div class="col-md-3">
+        Reminder date<input type="datetime-local" class="form-control" ng-model="event.reminder_date">
+      </div>
+      <button type="button" class="btn btn-success" ng-click="createEvent()" ng-if="addTaskState">
                 Add event</button>
-            <button type="button" class="btn btn-success" ng-click="updateEvent()" ng-if="editTaskState">
+      <button type="button" class="btn btn-success" ng-click="updateEvent()" ng-if="editTaskState">
                 Save event</button>
-            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addTaskState || editTaskState">
+      <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addTaskState || editTaskState">
                 Cancel</button>
-        </form>
-    </div>
+    </form>
+  </div>
 </body>
 </html>
