Added activation by email && Updated accountsCtrl

--- a/front/templates/about.html
+++ b/front/templates/about.html
@@ -7,7 +7,9 @@
 <body>
   <h1 class="page-header">About project</h1>
   <div class="row well">
-    <h3 class="text-center">In project we use:</h3>
+    <div class="col-md-12">
+      <h3><strong>In project we use:</strong></h3>
+    </div>
     <div class="col-md-6">
       <li><strong><a href="https://www.djangoproject.com/">Python/Django</a> - back-end</strong>
         <img src="img/python-django.png"></li>
