--- a/front/templates/budget/currency.html
+++ b/front/templates/budget/currency.html
@@ -46,9 +46,9 @@
         Short name<input type="text" class="form-control" ng-model="currency.short_name">
       </div>
       <button type="button" class="btn btn-success" ng-click="createCurrency()" ng-if="addItemState">
-                Add account</button>
+                Add currency</button>
       <button type="button" class="btn btn-success" ng-click="updateCurrency()" ng-if="editItemState">
-                Save account</button>
+                Save currency</button>
       <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addItemState || editItemState">
                 Cancel</button>
     </form>
