--- a/front/templates/task/short-task.html
+++ b/front/templates/task/short-task.html
@@ -41,7 +41,7 @@
     <h3>{{ edit_status }}</h3>
     <form role="form">
       <div class="col-md-4">
-        Title<input type="text" class="form-control" ng-model="shortTask.title">
+        Title<input type="text" class="form-control" ng-model="shortTask.title" required="">
       </div>
       <div class="col-md-6">
         Body<textarea class="form-control" rows="6" ng-model="shortTask.body"></textarea>
