--- a/front/templates/accounts/sing-in.html
+++ b/front/templates/accounts/sing-in.html
@@ -9,16 +9,14 @@
     <div class="col-md-4">
       <form class="form-signin">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
-               autofocus="" ng-model="userdata.email">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required=""
-               ng-model="userdata.password">
+        <input type="email" class="form-control" placeholder="Email address" required=""
+               autofocus="" ng-model="userData.email"><br>
+        <input type="password" class="form-control" placeholder="Password" required=""
+               ng-model="userData.password">
         <div class="checkbox">
-          <!--<label><input type="checkbox" value="remember-me"> </label>-->
+          <!--<label><input type="checkbox" value="rememberMe"> </label>-->
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="logIn()">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="logIn()">Sign In</button>
       </form>
     </div>
   </div>
