--- a/front/templates/accounts/sing-up.html
+++ b/front/templates/accounts/sing-up.html
@@ -5,17 +5,20 @@
   <title>Sing Up</title>
 </head>
 <body>
-  <div class="container row">
-    <h4 class="alert alert-danger"><strong>Sorry!</strong> Registration off!</h4>
+  <div class="row">
+    <!--<div class="col-md-12">-->
+      <!--<h4 class="alert alert-danger"><strong>Sorry!</strong> Registration off!</h4>-->
+    <!--</div>-->
     <div class="col-md-4">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign up</h2>
-        <h5 class="alert alert-warning">Passwords MUST be identical!</h5>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <input type="password" class="form-control" placeholder="Password" required="">
-        <input type="password" class="form-control" placeholder="Password" required="">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+      <form class="form-signIn">
+        <h2 class="form-signIn-heading">Please sign up</h2>
+        <input type="email" class="form-control" placeholder="Email address" required="" autofocus=""
+               ng-model="dataSignUp.email"><br>
+        <input type="text" class="form-control" placeholder="Name" required="" ng-model="dataSignUp.username"><br>
+        <input type="password" class="form-control" placeholder="Password" required="" ng-model="dataSignUp.password1"><br>
+        <input type="password" class="form-control" placeholder="Password" required="" ng-model="dataSignUp.password2">
+        <h5><i>Passwords MUST be identical!</i></h5>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="signUp()">Sign up</button>
       </form>
     </div>
   </div>
