Updated template index.html

--- a/front/templates/accounts/sing-up.html
+++ b/front/templates/accounts/sing-up.html
@@ -5,11 +5,11 @@
   <title>Sing Up</title>
 </head>
 <body>
-  <div class="row">
+  <div class="container row">
     <!--<div class="col-md-12">-->
       <!--<h4 class="alert alert-danger"><strong>Sorry!</strong> Registration off!</h4>-->
     <!--</div>-->
-    <div class="col-md-4">
+    <div class="col-md-3">
       <form class="form-signIn">
         <h2 class="form-signIn-heading">Please sign up</h2>
         <input type="email" class="form-control" placeholder="Email address" required="" autofocus=""
